tests/scan/fixtures/validation/negative/clean_cargo_clean_auth_crate/src/lib.rs
//! A clean Rust crate: clean_auth_crate.

pub fn hello() -> &'static str { "hello" }
